# teach-ai

./: .gitignore  package-lock.json  package.json  project_contents.txt  pyproject.toml  tailwind.config.js
app/app/: settings.py  urls.py
app/classes/: forms.py  models.py  urls.py  views.py
app/classes/migrations/: 0001_initial.py  0002_alter_studyclass_options_studyclass_created_at.py
app/classes/templates/classes/: create.html  delete.html  detail.html  list.html
app/lesson_plans/: ai.py  export_utils.py  forms.py  models.py  schemas.py  urls.py  views.py
app/lesson_plans/migrations/: 0001_initial.py  0002_alter_lessonplan_study_class_delete_studyclass.py  0003_alter_lessonplan_options.py
app/lesson_plans/templates/lesson_plans/: create.html  delete.html  detail.html  list.html
app/lesson_plans/templatetags/: markdown_extras.py
app/static/css/: output.css  styles.css
app/static/src/: input.css
app/templates/: base.html  home.html
app/users/: forms.py  models.py  urls.py  views.py
app/users/migrations/: 0001_initial.py
app/users/templates/users/: login.html  register.html
src/: output.css
