[tool.poetry]
name = "teach-ai"
version = "0.1.0"
authors = ["nlsnnn <egor.larrr@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
django = "^5.2.6"
pydantic = "^2.11.9"
markdown = "^3.9"
beautifulsoup4 = "^4.14.2"
reportlab = "^4.4.4"
python-docx = "^1.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
